[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/actors/drones/ConstructionDrone.gd" type="Script" id=2]
[ext_resource path="res://assets/old mined/Units/engineer_drone.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0, 0.784314, 0, 1, 0, 0.784314, 0, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 4, 4, 1 )
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -60.0
scale = 4.0
scale_random = 1.0
color_ramp = SubResource( 3 )

[node name="ConstructionDrone" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="1"]
frames = SubResource( 1 )

[node name="BuildingParticles" type="Particles2D" parent="." index="5"]
show_behind_parent = true
amount = 40
process_material = SubResource( 4 )
